go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@zerolog_2.snap
---
source: go-runner/src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "[version]",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkContextAppend",
      "uri": "benchmark_test.go::BenchmarkContextAppend",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Bool",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Bool",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Bools",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Bools",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Ctx",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Ctx",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Dur",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Dur",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Durs",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Durs",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Err",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Err",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Errs",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Errs",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Float",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Float",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Floats",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Floats",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Int",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Int",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Interface",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Interface",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Interface(Object)",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Interface(Object)",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Interface(Objects)",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Interface(Objects)",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Interfaces",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Interfaces",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Ints",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Ints",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Object",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Object",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Str",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Str",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Stringer",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Stringer",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Strs",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Strs",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Time",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Time",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Times",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Times",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFieldType::Timestamp",
      "uri": "benchmark_test.go::BenchmarkContextFieldType::Timestamp",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkContextFields",
      "uri": "benchmark_test.go::BenchmarkContextFields",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkDisabled",
      "uri": "benchmark_test.go::BenchmarkDisabled",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHooks::Nop/Multi",
      "uri": "hook_test.go::BenchmarkHooks::Nop/Multi",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHooks::Nop/Single",
      "uri": "hook_test.go::BenchmarkHooks::Nop/Single",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHooks::Simple",
      "uri": "hook_test.go::BenchmarkHooks::Simple",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkInfo",
      "uri": "benchmark_test.go::BenchmarkInfo",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogArrayObject",
      "uri": "benchmark_test.go::BenchmarkLogArrayObject",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogEmpty",
      "uri": "benchmark_test.go::BenchmarkLogEmpty",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Bool",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Bool",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Bools",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Bools",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Ctx",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Ctx",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Dur",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Dur",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Durs",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Durs",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Err",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Err",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Errs",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Errs",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Float",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Float",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Floats",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Floats",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Int",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Int",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Interface",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Interface",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Interface(Object)",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Interface(Object)",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Interface(Objects)",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Interface(Objects)",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Interfaces",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Interfaces",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Ints",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Ints",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Object",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Object",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Str",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Str",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Strs",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Strs",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Time",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Time",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFieldType::Times",
      "uri": "benchmark_test.go::BenchmarkLogFieldType::Times",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkLogFields",
      "uri": "benchmark_test.go::BenchmarkLogFields",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::BasicSampler_0",
      "uri": "sampler_test.go::BenchmarkSamplers::BasicSampler_0",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::BasicSampler_1",
      "uri": "sampler_test.go::BenchmarkSamplers::BasicSampler_1",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::BasicSampler_5",
      "uri": "sampler_test.go::BenchmarkSamplers::BasicSampler_5",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::BurstSampler",
      "uri": "sampler_test.go::BenchmarkSamplers::BurstSampler",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::BurstSamplerNext",
      "uri": "sampler_test.go::BenchmarkSamplers::BurstSamplerNext",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::BurstSampler_0",
      "uri": "sampler_test.go::BenchmarkSamplers::BurstSampler_0",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::RandomSampler",
      "uri": "sampler_test.go::BenchmarkSamplers::RandomSampler",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkSamplers::RandomSampler_0",
      "uri": "sampler_test.go::BenchmarkSamplers::RandomSampler_0",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
