go-runner/src/snapshots/codspeed_go_runner__integration_tests__assert_results_snapshots@zerolog_3.snap
---
source: go-runner/src/integration_tests.rs
expression: content
---
{
  "creator": {
    "name": "codspeed-go",
    "version": "0.1.0",
    "pid": "[pid]"
  },
  "instrument": {
    "type": "walltime"
  },
  "benchmarks": [
    {
      "name": "BenchmarkDataRace",
      "uri": "hlog/hlog_test.go::BenchmarkDataRace",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHandlers::Combined",
      "uri": "hlog/hlog_test.go::BenchmarkHandlers::Combined",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHandlers::CombinedDisabled",
      "uri": "hlog/hlog_test.go::BenchmarkHandlers::CombinedDisabled",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHandlers::Single",
      "uri": "hlog/hlog_test.go::BenchmarkHandlers::Single",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    },
    {
      "name": "BenchmarkHandlers::SingleDisabled",
      "uri": "hlog/hlog_test.go::BenchmarkHandlers::SingleDisabled",
      "config": {
        "warmup_time_ns": null,
        "min_round_time_ns": null,
        "max_time_ns": null,
        "max_rounds": null
      },
      "stats": "[stats]"
    }
  ]
}
